<resources>
    <string name="app_name">GPeeS</string>
    <string name="filter">FILTER</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="top_rated">TOP RATED</string>
    <string name="closest">CLOSEST</string>
    <string name="cd_logo">Toilet App Logo</string>
    <string name="cd_menu">Navigation Menu</string>
    <string name="cd_toilet_location">Toilet Location</string>
    <string name="cd_accessible_toilet_location">Accessible Toilet Location</string>
    <string name="bathroom_address_format">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>